<resources>
    <string name="app_name">UserForam</string>
    <string name="number">Number</string>
    <string name="preview">Preview</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
</resources>